[package]
name = "esp-ota"
version = "0.2.1"
authors = ["Linus Färnstrand <faern@faern.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/faern/esp-ota"
edition = "2021"

description = """
Easy OTA updates for ESP32 chips using only safe Rust. Transport agnostic.
"""

keywords = ["esp", "esp32", "ota", "update", "flash"]
categories = ["embedded", "api-bindings"]

[features]
default = ["log"]

[dependencies]
esp-idf-sys = { version = "0.35.0" }
# If the `log` feature is enabled, the crate does some internal logging during the OTA operations
log = { version = "0.4", optional = true }

[build-dependencies]
embuild = "0.32"
